// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormCheckboxGroup renders checkboxes with some pre-checked 1`] = `

<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-checkboxes"
  >
    <div class="govuk-checkboxes">
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-1"
               name="test-checkboxes"
               type="checkbox"
               value="1"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-1"
        >
          Test checkbox 1
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-2"
               name="test-checkboxes"
               type="checkbox"
               value="2"
               checked
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-2"
        >
          Test checkbox 2
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-3"
               name="test-checkboxes"
               type="checkbox"
               value="3"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-3"
        >
          Test checkbox 3
        </label>
      </div>
    </div>
  </fieldset>
</div>

`;

exports[`FormCheckboxGroup renders correctly with legend 1`] = `

<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-checkboxes"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
      Choose some checkboxes
    </legend>
    <div class="govuk-checkboxes">
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-1"
               name="test-checkboxes"
               type="checkbox"
               value="1"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-1"
        >
          Test checkbox 1
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-2"
               name="test-checkboxes"
               type="checkbox"
               value="2"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-2"
        >
          Test checkbox 2
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-3"
               name="test-checkboxes"
               type="checkbox"
               value="3"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-3"
        >
          Test checkbox 3
        </label>
      </div>
    </div>
  </fieldset>
</div>

`;

exports[`FormCheckboxGroup renders correctly with small size variants 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <fieldset
      class="govuk-fieldset"
      id="test-checkboxes"
    >
      <div
        class="govuk-checkboxes"
      >
        <div
          class="govuk-checkboxes__item itemSmall"
        >
          <input
            class="govuk-checkboxes__input"
            id="checkbox-1"
            name="test-checkboxes"
            type="checkbox"
            value="1"
          />
          <label
            class="govuk-label govuk-checkboxes__label"
            for="checkbox-1"
          >
            Test checkbox 1
          </label>
        </div>
        <div
          class="govuk-checkboxes__item itemSmall"
        >
          <input
            class="govuk-checkboxes__input"
            id="checkbox-2"
            name="test-checkboxes"
            type="checkbox"
            value="2"
          />
          <label
            class="govuk-label govuk-checkboxes__label"
            for="checkbox-2"
          >
            Test checkbox 2
          </label>
        </div>
        <div
          class="govuk-checkboxes__item itemSmall"
        >
          <input
            class="govuk-checkboxes__input"
            id="checkbox-3"
            name="test-checkboxes"
            type="checkbox"
            value="3"
          />
          <label
            class="govuk-label govuk-checkboxes__label"
            for="checkbox-3"
          >
            Test checkbox 3
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`FormCheckboxGroup renders list of checkboxes in correct order 1`] = `

<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-checkboxes"
  >
    <div class="govuk-checkboxes">
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-1"
               name="test-checkboxes"
               type="checkbox"
               value="1"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-1"
        >
          Test checkbox 1
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-2"
               name="test-checkboxes"
               type="checkbox"
               value="2"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-2"
        >
          Test checkbox 2
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-3"
               name="test-checkboxes"
               type="checkbox"
               value="3"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-3"
        >
          Test checkbox 3
        </label>
      </div>
    </div>
  </fieldset>
</div>

`;

exports[`FormCheckboxGroup renders unchecked \`Select all\` option when \`selectAll\` is true 1`] = `

<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-checkboxes"
  >
    <div class="govuk-checkboxes">
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="test-checkboxes-all"
               name="test-checkboxes"
               type="checkbox"
               value="select-all"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="test-checkboxes-all"
        >
          Select all
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-1"
               name="test-checkboxes"
               type="checkbox"
               value="1"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-1"
        >
          Test checkbox 1
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-2"
               name="test-checkboxes"
               type="checkbox"
               value="2"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-2"
        >
          Test checkbox 2
        </label>
      </div>
      <div class="govuk-checkboxes__item">
        <input class="govuk-checkboxes__input"
               id="checkbox-3"
               name="test-checkboxes"
               type="checkbox"
               value="3"
        >
        <label class="govuk-label govuk-checkboxes__label"
               for="checkbox-3"
        >
          Test checkbox 3
        </label>
      </div>
    </div>
  </fieldset>
</div>

`;
